--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/_fat.owl/?next=%2F"><i class="icon-social-instagram"></i></a>
+                        
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="https://github.com/Billzerma"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Your Website 2023</p>
